feat: update template and purge contents.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: chloetigrerouge@ws
-description: 🐯⌨️🌐
+title: matcha's GitHub homepage
+description: Tea, Computers, Electronic Music, and Opinions ®™
